dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 551
if _libs["grass_gis.8.5"].has("G_fully_qualified_name", "cdecl"):
    G_fully_qualified_name = _libs["grass_gis.8.5"].get(
        "G_fully_qualified_name", "cdecl"
    )
    G_fully_qualified_name.argtypes = [String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_fully_qualified_name.restype = ReturnString
    else:
        G_fully_qualified_name.restype = String
        G_fully_qualified_name.errcheck = ReturnString

# include/grass/defs/gis.h: 552
if _libs["grass_gis.8.5"].has("G_unqualified_name", "cdecl"):
    G_unqualified_name = _libs["grass_gis.8.5"].get("G_unqualified_name", "cdecl")
    G_unqualified_name.argtypes = [String, String, String, String]
    G_unqualified_name.restype = c_int

# include/grass/defs/gis.h: 555
if _libs["grass_gis.8.5"].has("G_set_omp_num_threads", "cdecl"):
    G_set_omp_num_threads = _libs["grass_gis.8.5"].get("G_set_omp_num_threads", "cdecl")
    G_set_omp_num_threads.argtypes = [POINTER(struct_Option)]
    G_set_omp_num_threads.restype = c_int

# include/grass/defs/gis.h: 558
if _libs["grass_gis.8.5"].has("G_open_new", "cdecl"):
    G_open_new = _libs["grass_gis.8.5"].get("G_open_new", "cdecl")
    G_open_new.argtypes = [String, String]
    G_open_new.restype = c_int

# include/grass/defs/gis.h: 559
if _libs["grass_gis.8.5"].has("G_open_old", "cdecl"):
    G_open_old = _libs["grass_gis.8.5"].get("G_open_old", "cdecl")
    G_open_old.argtypes = [String, String, String]
    G_open_old.restype = c_int

# include/grass/defs/gis.h: 560
if _libs["grass_gis.8.5"].has("G_open_update", "cdecl"):
    G_open_update = _libs["grass_gis.8.5"].get("G_open_update", "cdecl")
    G_open_update.argtypes = [String, String]
    G_open_update.restype = c_int

# include/grass/defs/gis.h: 561
if _libs["grass_gis.8.5"].has("G_fopen_new", "cdecl"):
    G_fopen_new = _libs["grass_gis.8.5"].get("G_fopen_new", "cdecl")
    G_fopen_new.argtypes = [String, String]
    G_fopen_new.restype = POINTER(FILE)

# include/grass/defs/gis.h: 562
if _libs["grass_gis.8.5"].has("G_fopen_old", "cdecl"):
    G_fopen_old = _libs["grass_gis.8.5"].get("G_fopen_old", "cdecl")
    G_fopen_old.argtypes = [String, String, String]
    G_fopen_old.restype = POINTER(FILE)

# include/grass/defs/gis.h: 563
if _libs["grass_gis.8.5"].has("G_fopen_append", "cdecl"):
    G_fopen_append = _libs["grass_gis.8.5"].get("G_fopen_append", "cdecl")
    G_fopen_append.argtypes = [String, String]
    G_fopen_append.restype = POINTER(FILE)

# include/grass/defs/gis.h: 564
if _libs["grass_gis.8.5"].has("G_fopen_modify", "cdecl"):
    G_fopen_modify = _libs["grass_gis.8.5"].get("G_fopen_modify", "cdecl")
    G_fopen_modify.argtypes = [String, String]
    G_fopen_modify.restype = POINTER(FILE)

# include/grass/defs/gis.h: 567
if _libs["grass_gis.8.5"].has("G_open_new_misc", "cdecl"):
    G_open_new_misc = _libs["grass_gis.8.5"].get("G_open_new_misc", "cdecl")
    G_open_new_misc.argtypes = [String, String, String]
    G_open_new_misc.restype = c_int

# include/grass/defs/gis.h: 568
if _libs["grass_gis.8.5"].has("G_open_old_misc", "cdecl"):
    G_open_old_misc = _libs["grass_gis.8.5"].get("G_open_old_misc", "cdecl")
    G_open_old_misc.argtypes = [String, String, String, String]
    G_open_old_misc.restype = c_int

# include/grass/defs/gis.h: 569
if _libs["grass_gis.8.5"].has("G_open_update_misc", "cdecl"):
    G_open_update_misc = _libs["grass_gis.8.5"].get("G_open_update_misc", "cdecl")
    G_open_update_misc.argtypes = [String, String, String]
    G_open_update_misc.restype = c_int

# include/grass/defs/gis.h: 570
if _libs["grass_gis.8.5"].has("G_fopen_new_misc", "cdecl"):
    G_fopen_new_misc = _libs["grass_gis.8.5"].get("G_fopen_new_misc", "cdecl")
    G_fopen_new_misc.argtypes = [String, String, String]
    G_fopen_new_misc.restype = POINTER(FILE)

# include/grass/defs/gis.h: 571
if _libs["grass_gis.8.5"].has("G_fopen_old_misc", "cdecl"):
    G_fopen_old_misc = _libs["grass_gis.8.5"].get("G_fopen_old_misc", "cdecl")
    G_fopen_old_misc.argtypes = [String, String, String, String]
    G_fopen_old_misc.restype = POINTER(FILE)

# include/grass/defs/gis.h: 572
if _libs["grass_gis.8.5"].has("G_fopen_append_misc", "cdecl"):
    G_fopen_append_misc = _libs["grass_gis.8.5"].get("G_fopen_append_misc", "cdecl")
    G_fopen_append_misc.argtypes = [String, String, String]
    G_fopen_append_misc.restype = POINTER(FILE)

# include/grass/defs/gis.h: 573
if _libs["grass_gis.8.5"].has("G_fopen_modify_misc", "cdecl"):
    G_fopen_modify_misc = _libs["grass_gis.8.5"].get("G_fopen_modify_misc", "cdecl")
    G_fopen_modify_misc.argtypes = [String, String, String]
    G_fopen_modify_misc.restype = POINTER(FILE)

# include/grass/defs/gis.h: 576
if _libs["grass_gis.8.5"].has("G_check_overwrite", "cdecl"):
    G_check_overwrite = _libs["grass_gis.8.5"].get("G_check_overwrite", "cdecl")
    G_check_overwrite.argtypes = [c_int, POINTER(POINTER(c_char))]
    G_check_overwrite.restype = c_int

# include/grass/defs/gis.h: 579
if _libs["grass_gis.8.5"].has("G_open_pager", "cdecl"):
    G_open_pager = _libs["grass_gis.8.5"].get("G_open_pager", "cdecl")
    G_open_pager.argtypes = [POINTER(struct_Popen)]
    G_open_pager.restype = POINTER(FILE)

# include/grass/defs/gis.h: 580
if _libs["grass_gis.8.5"].has("G_close_pager", "cdecl"):
    G_close_pager = _libs["grass_gis.8.5"].get("G_close_pager", "cdecl")
    G_close_pager.argtypes = [POINTER(struct_Popen)]
    G_close_pager.restype = None

# include/grass/defs/gis.h: 581
if _libs["grass_gis.8.5"].has("G_open_mail", "cdecl"):
    G_open_mail = _libs["grass_gis.8.5"].get("G_open_mail", "cdecl")
    G_open_mail.argtypes = [POINTER(struct_Popen)]
    G_open_mail.restype = POINTER(FILE)

# include/grass/defs/gis.h: 582
if _libs["grass_gis.8.5"].has("G_close_mail", "cdecl"):
    G_close_mail = _libs["grass_gis.8.5"].get("G_close_mail", "cdecl")
    G_close_mail.argtypes = [POINTER(struct_Popen)]
    G_close_mail.restype = None

# include/grass/defs/gis.h: 585
if _libs["grass_gis.8.5"].has("G_disable_interactive", "cdecl"):
    G_disable_interactive = _libs["grass_gis.8.5"].get("G_disable_interactive", "cdecl")
    G_disable_interactive.argtypes = []
    G_disable_interactive.restype = None

# include/grass/defs/gis.h: 586
if _libs["grass_gis.8.5"].has("G_define_module", "cdecl"):
    G_define_module = _libs["grass_gis.8.5"].get("G_define_module", "cdecl")
    G_define_module.argtypes = []
    G_define_module.restype = POINTER(struct_GModule)

# include/grass/defs/gis.h: 587
if _libs["grass_gis.8.5"].has("G_define_flag", "cdecl"):
    G_define_flag = _libs["grass_gis.8.5"].get("G_define_flag", "cdecl")
    G_define_flag.argtypes = []
    G_define_flag.restype = POINTER(struct_Flag)

# include/grass/defs/gis.h: 588
if _libs["grass_gis.8.5"].has("G_define_option", "cdecl"):
    G_define_option = _libs["grass_gis.8.5"].get("G_define_option", "cdecl")
    G_define_option.argtypes = []
    G_define_option.restype = POINTER(struct_Option)

# include/grass/defs/gis.h: 589
if _libs["grass_gis.8.5"].has("G_define_standard_option", "cdecl"):
    G_define_standard_option = _libs["grass_gis.8.5"].get(
        "G_define_standard_option", "cdecl"
    )
    G_define_standard_option.argtypes = [c_int]
    G_define_standard_option.restype = POINTER(struct_Option)

# include/grass/defs/gis.h: 590
if _libs["grass_gis.8.5"].has("G_define_standard_flag", "cdecl"):
    G_define_standard_flag = _libs["grass_gis.8.5"].get(
        "G_define_standard_flag", "cdecl"
    )
    G_define_standard_flag.argtypes = [c_int]
    G_define_standard_flag.restype = POINTER(struct_Flag)

# include/grass/defs/gis.h: 591
if _libs["grass_gis.8.5"].has("G_parser", "cdecl"):
    G_parser = _libs["grass_gis.8.5"].get("G_parser", "cdecl")
    G_parser.argtypes = [c_int, POINTER(POINTER(c_char))]
    G_parser.restype = c_int

# include/grass/defs/gis.h: 592
if _libs["grass_gis.8.5"].has("G_usage", "cdecl"):
    G_usage = _libs["grass_gis.8.5"].get("G_usage", "cdecl")
    G_usage.argtypes = []
    G_usage.restype = None

# include/grass/defs/gis.h: 593
if _libs["grass_gis.8.5"].has("G_recreate_command", "cdecl"):
    G_recreate_command = _libs["grass_gis.8.5"].get("G_recreate_command", "cdecl")
    G_recreate_command.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_recreate_command.restype = ReturnString
    else:
        G_recreate_command.restype = String
        G_recreate_command.errcheck = ReturnString

# include/grass/defs/gis.h: 594
if _libs["grass_gis.8.5"].has("G_add_keyword", "cdecl"):
    G_add_keyword = _libs["grass_gis.8.5"].get("G_add_keyword", "cdecl")
    G_add_keyword.argtypes = [String]
    G_add_keyword.restype = None

# include/grass/defs/gis.h: 595
if _libs["grass_gis.8.5"].has("G_set_keywords", "cdecl"):
    G_set_keywords = _libs["grass_gis.8.5"].get("G_set_keywords", "cdecl")
    G_set_keywords.argtypes = [String]
    G_set_keywords.restype = None

# include/grass/defs/gis.h: 596
if _libs["grass_gis.8.5"].has("G_get_overwrite", "cdecl"):
    G_get_overwrite = _libs["grass_gis.8.5"].get("G_get_overwrite", "cdecl")
    G_get_overwrite.argtypes = []
    G_get_overwrite.restype = c_int

# include/grass/defs/gis.h: 597
if _libs["grass_gis.8.5"].has("G_option_to_separator", "cdecl"):
    G_option_to_separator = _libs["grass_gis.8.5"].get("G_option_to_separator", "cdecl")
    G_option_to_separator.argtypes = [POINTER(struct_Option)]
    if sizeof(c_int) == sizeof(c_void_p):
        G_option_to_separator.restype = ReturnString
    else:
        G_option_to_separator.restype = String
        G_option_to_separator.errcheck = ReturnString

# include/grass/defs/gis.h: 598
if _libs["grass_gis.8.5"].has("G_open_option_file", "cdecl"):
    G_open_option_file = _libs["grass_gis.8.5"].get("G_open_option_file", "cdecl")
    G_open_option_file.argtypes = [POINTER(struct_Option)]
    G_open_option_file.restype = POINTER(FILE)

# include/grass/defs/gis.h: 599
if _libs["grass_gis.8.5"].has("G_close_option_file", "cdecl"):
    G_close_option_file = _libs["grass_gis.8.5"].get("G_close_option_file", "cdecl")
    G_close_option_file.argtypes = [POINTER(FILE)]
    G_close_option_file.restype = None

# include/grass/defs/gis.h: 602
if _libs["grass_gis.8.5"].has("G_option_rule", "cdecl"):
    G_option_rule = _libs["grass_gis.8.5"].get("G_option_rule", "cdecl")
    G_option_rule.argtypes = [c_int, c_int, POINTER(POINTER(None))]
    G_option_rule.restype = None

# include/grass/defs/gis.h: 603
if _libs["grass_gis.8.5"].has("G_option_exclusive", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_option_exclusive", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(None)]
    G_option_exclusive = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 604
if _libs["grass_gis.8.5"].has("G_option_required", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_option_required", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(None)]
    G_option_required = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 605
if _libs["grass_gis.8.5"].has("G_option_requires", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_option_requires", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(None)]
    G_option_requires = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 606
if _libs["grass_gis.8.5"].has("G_option_requires_all", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_option_requires_all", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [POINTER(None)]
    G_option_requires_all = _variadic_function(_func, _restype, _argtypes, _errcheck)
